rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  labels:
    app: rollouts-demo
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: "shariqrizvi/simple-frontend:v7"
          ports:
          - containerPort: 3000
            protocol: TCP
  strategy:
    blueGreen:
       activeService: rollouts-demo
       previewService: rollouts-demo-preview
       previewReplicaCount: 2
       autoPromotionEnabled: false
       autoPromotionSeconds: 300
       scaleDownDelaySeconds: 300
#    canary: #Indicates that the rollout should use the Canary strategy
#      maxSurge: "50%"
#      maxUnavailable: 0
#      steps:
#      - setWeight: 50
#      - pause:
#          duration: 120 # seconds
